entes/central/sandbox/k8s-manifestos/banco.yaml

kind: Service
apiVersion: v1
metadata:
  name: sandbox-banco-mysql
spec:
  selector:
    app: sandbox-banco-mysql
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sandbox-banco-mysql
spec:
  selector:
    matchLabels:
      app: sandbox-banco-mysql
  serviceName: "sandbox-banco-mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: sandbox-banco-mysql
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: mariadb
        image: mariadb:10.5.1
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 10Gi
